# Biomedical-RAG-Agent

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REPORT.md  SECURITY.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: main.py
data/: .gitkeep
docs/: blog-biomedical-rag.md
eval_results/: comparison.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
notebooks/: README.md
scripts/: check_gateway.py  probe_models.py  run_compare.py  run_eval.py  run_m2.py  run_m3.py  tune_abstain.py
src/biomed_rag/: __init__.py  config.py  util.py
src/biomed_rag/agent/: __init__.py  rag.py
src/biomed_rag/eval/: __init__.py  harness.py  judge.py  metrics.py
src/biomed_rag/ingest/: __init__.py  pubmedqa.py
src/biomed_rag/models/: __init__.py  client.py
src/biomed_rag/retrieval/: __init__.py  base.py  embeddings.py  hybrid.py  pgvector_store.py  store.py
tests/: test_metrics.py  test_smoke.py
