[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biomed-rag"
version = "0.1.0"
description = "Grounded biomedical RAG agent with a frontier-vs-open evaluation harness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "python-dotenv>=1",
    # retrieval
    "sentence-transformers>=3",
    "rank-bm25>=0.2",
    "pgvector>=0.3",
    "psycopg[binary]>=3.1",
    # models (frontier + open)
    "anthropic>=0.40",
    "openai>=1.40",
    # data
    "datasets>=2.20",
    "httpx>=0.27",
    # api
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "ipykernel>=6",
    "jupyter>=1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
