[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biomed-rag"
version = "0.1.0"
description = "Grounded biomedical RAG agent with a frontier-vs-open evaluation harness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "python-dotenv>=1",
    # retrieval
    "fastembed>=0.4",  # dense embeddings (ONNX, OSS, no torch — works on Python 3.14)
    "rank-bm25>=0.2",  # lexical BM25
    "numpy>=1.26",
    "pgvector>=0.3",
    "psycopg[binary]>=3.1",
    # models — OpenAI-compatible client pointed at LLMGateway (frontier + open)
    "openai>=1.40",
    # data
    "datasets>=2.20",
    "httpx>=0.27",
    # api
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "ipykernel>=6",
    "jupyter>=1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
